better default apache site.conf

--- a/etc/qtc/apache-site.conf
+++ b/etc/qtc/apache-site.conf
@@ -1,16 +1,17 @@
 <VirtualHost *:443>
-	ServerAdmin webmaster@qtc-net.org
+	ServerAdmin webmaster@yourservername.com
 	ServerName www.yourservername.com
 	ServerAlias analias.com
 	
 	AddHandler cgi-script .cgi .pl
 	
 	DirectoryIndex qtc-web.cgi index.html
-	DocumentRoot /home/zem/devel/qtc-net/cgi-bin
-	<Directory "/home/zem/devel/qtc-net/cgi-bin">
-		SetEnv PERL5LIB /home/zem/devel/qtc-net/lib
-                SetEnv QTC_ROOT /var/spool/qtc/messages
-                SetEnv QTC_PRIV_PATH_PREFIX /var/spool/qtc/qtc-web
+	DocumentRoot /usr/local/share/qtc/cgi-bin
+	<Directory "/usr/local/share/qtc/cgi-bin">
+		#SetEnv PERL5LIB /home/zem/devel/qtc-net/lib
+      SetEnv QTC_ROOT /var/spool/qtc/messages
+      SetEnv QTC_PRIV_PATH_PREFIX /var/spool/qtc/qtc-web
+		# This variable points to the Homepage with the top link
 		SetEnv QTC_HOME_PAGE https://www.qtc-net.org/www
 		AllowOverride None
 		Options Indexes FollowSymLinks
@@ -18,17 +19,6 @@
 		Order allow,deny
 		Allow from all
 		Require all granted
-	</Directory>
-	Alias /www /home/zem/devel/qtc-net/www
-	<Directory /home/zem/devel/qtc-net/www>
-		Options Indexes FollowSymLinks MultiViews
-		AllowOverride None
-		Order allow,deny
-		allow from all
-		Require all granted
-		# This directive allows us to have apache2's default start page
-                # in /apache2-default/, but still have / go to the right place
-		#RedirectMatch ^/$ /apache2-default/
 	</Directory>
 
 	ErrorLog /var/log/apache2/qtc-net-error.log
@@ -157,38 +147,27 @@
 		# MSIE 7 and newer should be able to use keepalive
 		BrowserMatch "MSIE [17-9]" ssl-unclean-shutdown
 </VirtualHost>
+
 <VirtualHost *:80>
-	ServerAdmin webmaster@qtc-net.org
-	ServerName www.qtc-net.org
-	ServerAlias qtc-net.org
+	ServerAdmin webmaster@yourservername.com
+	ServerName www.yourservername.com
+	ServerAlias analias.com
 	
 	AddHandler cgi-script .cgi .pl
 	Redirect /qtc-web.cgi https://www.qtc-net.org/qtc-web.cgi
 	Redirect /qtc-web-xml.cgi https://www.qtc-net.org/qtc-web-xml.cgi
 	
-	DocumentRoot /home/zem/devel/qtc-net/cgi-bin
-	<Directory "/home/zem/devel/qtc-net/cgi-bin">
-		SetEnv PERL5LIB /home/zem/devel/qtc-net/lib
-                SetEnv QTC_ROOT /var/spool/qtc/messages
-                SetEnv QTC_PRIV_PATH_PREFIX /var/spool/qtc/qtc-web
-		SetEnv QTC_HOME_PAGE https://www.qtc-net.org/www
+	DocumentRoot /usr/local/share/qtc/cgi-bin
+	<Directory "/usr/local/share/qtc/cgi-bin">
+		#SetEnv PERL5LIB /home/zem/devel/qtc-net/lib
+      SetEnv QTC_ROOT /var/spool/qtc/messages
+      SetEnv QTC_PRIV_PATH_PREFIX /var/spool/qtc/qtc-web
 		AllowOverride None
 		Options Indexes FollowSymLinks
 		Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
 		Order allow,deny
 		Allow from all
 		Require all granted
-	</Directory>
-	Alias /www /home/zem/devel/qtc-net/www
-	<Directory /home/zem/devel/qtc-net/www>
-		Options Indexes FollowSymLinks MultiViews
-		AllowOverride None
-		Order allow,deny
-		allow from all
-		Require all granted
-		# This directive allows us to have apache2's default start page
-                # in /apache2-default/, but still have / go to the right place
-		#RedirectMatch ^/$ /apache2-default/
 	</Directory>
 
 	ErrorLog /var/log/apache2/qtc-net-error.log
