aprs init script

--- a/etc/qtc/aprs.conf
+++ b/etc/qtc/aprs.conf
@@ -2,11 +2,14 @@
 # Set up where the QTC Net Processor finds its Data Directory
 DATA_DIR=/var/spool/qtc/messages
 
-APRS_IS_USER=OE1SRC
-APRS_IS_PASS=24503
+APRS_IS_USER=YOURCALL
+APRS_IS_PASS=somesecret
 
 PRIVATE_KEY_DIR=pse_configure_ur_private_key_directory_here
 
 # selfexplaining
 LOG_FILE=/var/spool/qtc/aprs.log
+
+#FILTER="r/48.2090/16.3700/500 t/sm"
+#HOSTPORT="euro.aprs2.net:14580"
 
