--- a/etc/qtc/aprs.conf
+++ b/etc/qtc/aprs.conf
@@ -13,3 +13,7 @@ LOG_FILE=/var/spool/qtc/aprs.log
 #FILTER="r/48.2090/16.3700/500 t/sm"
 #HOSTPORT="euro.aprs2.net:14580"
 
+# Start as www-data so the web frontend and the extra interfaces 
+#  can have access 
+RUN_AS=www-data
+
