in loop has an archive setting together with the init scrripts

--- a/etc/qtc/processor.conf
+++ b/etc/qtc/processor.conf
@@ -5,6 +5,11 @@ DATA_DIR=/var/spool/qtc/messages
 # selfexplaining
 LOG_FILE=/var/spool/qtc/processor.log
 
+# if archive is set true, expired messages will be moved to 
+# an archive directory, admin has to take care manually 
+# to remove them.  default is false
+#ARCHIVE=true
+
 # Start as www-data so the web frontend and the extra interfaces 
 #  can have access 
 RUN_AS=www-data
